--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div class="about__image">
     <img class="about__sun-image" src="img/sun.png">
     <img class="about__image" src="img/solar-panel.png">
+    <div></div>
 </div>
 </section>
 </body>
